syntax ="proto3";

package calculator;

message PrimeCompose{
   int32 firstNo = 1;
   int32 secondNo =2;
}

message PrimeCompositionRequest {
    PrimeCompose primecompose = 1;
}

message PrimeCompositionResponse {
    int32 result = 1;
}

option go_package="calculator/calculatorpb";

service PrimeCompositionService{
    rpc PrimeComposition (PrimeCompositionRequest) returns (stream PrimeCompositionResponse){};
}
